test/testdata/e2e/virtual-service-from-template-delete.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service-from-template-delete
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  template:
    name: virtual-service-template-default-https
  templateOptions:
    - field: accessLogConfig
      modifier: delete
  accessLog:
    name: envoy.access_loggers
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
      log_format:
        json_format:
          type: "request"
          protocol: "%PROTOCOL%"
          method: "%REQ(:METHOD)%"
          path: "%REQ(:path)%"
          responseCode: "%RESPONSE_CODE%"
          duration: "%DURATION%"
          CONNECTION_TERMINATION_DETAILS: "%CONNECTION_TERMINATION_DETAILS%"
          UPSTREAM_CLUSTER: "%UPSTREAM_CLUSTER%"
          UPSTREAM_HOST: "%UPSTREAM_HOST%"
          UPSTREAM_LOCAL_ADDRESS: "%UPSTREAM_LOCAL_ADDRESS%"
          UPSTREAM_TRANSPORT_FAILURE_REASON: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
        omit_empty_values: true
  virtualHost:
    domains:
      - exc.kaasops.io
    name: test
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"answer\":\"true\"}"
