test/testdata/e2e/virtual-service-from-template-modify.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service-from-template-modify
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  template:
    name: virtual-service-template-modify
  templateOptions:
    - field: virtualHost.routes
      modifier: merge
  virtualHost:
    domains:
      - exc.kaasops.io
    name: test
    routes:
      - match:
          prefix: "/health"
        direct_response:
          status: 200
          body:
            inline_string: "{\"status\":\"ok\"}"
