test/testdata/e2e/virtual-service-from-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service-from-template
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  template:
    name: virtual-service-template-default-https
  virtualHost:
    domains:
      - exc.kaasops.io
