test/testdata/e2e/virtual-service-template-modify-1.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: virtual-service-template-modify
spec:
  listener:
    name: https
  accessLogConfig:
    name: stdout
  additionalHttpFilters:
    - name: router
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    name: test
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"answer\":\"true\"}"
