test/testdata/e2e/virtualservice-accesslog-auto-generate-filename.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: accesslog-auto-generate-filename
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: http
  accessLogConfig:
    name: file-auto-generated-filename
  additionalHttpFilters:
  - name: router
  virtualHost:
    domains:
    - "*"
    name: test
    routes: 
    - match:
        prefix: "/"
      direct_response:
        status: 200
        body: 
          inline_string: "{\"answer\":\"true\"}"
