test/testdata/e2e/virtualservice-static-route-https.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service-used-route-https
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: https
  accessLogConfig:
    name: stdout
  additionalHttpFilters:
  - name: router
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    domains:
    - "exc.kaasops.io"
    name: exc-kaasops-io
    routes: 
    - match:
        prefix: "/"
      direct_response:
        status: 200
        body: 
          inline_string: "{\"answer\":\"true\"}"
