test/testdata/e2e/vs-https-rbac.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-https-rbac
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  rbac:
    action: DENY
    policies:
      test-policy:
        permissions:
          - and_rules:
              rules:
                - header:
                    name: ":method"
                    string_match:
                      exact: "GET"
                - url_path:
                    path: { prefix: "/ping" }
        principals:
          - any: true
  listener:
    name: https
  accessLogConfig:
    name: stdout
  additionalHttpFilters:
    - name: router
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    domains:
      - "exc.kaasops.io"
    name: exc-kaasops-io
    routes:
      - match:
          prefix: "/ping"
        direct_response:
          status: 200
          body:
            inline_string: "{\"answer\":\"ping\"}"
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"answer\":\"true\"}"
