test/testdata/e2e/vs-rbac.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-rbac
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  rbac:
    action: DENY
    policies:
      test-policy:
        permissions:
          - and_rules:
              rules:
                - header:
                    name: ":method"
                    string_match:
                      exact: "GET"
                - url_path:
                    path: { prefix: "/ping" }
                - or_rules:
                    rules:
                      - destination_port: 443
        principals:
          - any: true
  listener:
    name: http
  accessLogConfig:
    name: stdout
  additionalHttpFilters:
    - name: router
  virtualHost:
    domains:
      - "*"
    name: test
    routes:
      - match:
          prefix: "/ping"
        direct_response:
          status: 200
          body:
            inline_string: "{\"answer\":\"ping\"}"
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"answer\":\"true\"}"
