test/testdata/e2e/vsvc-template-domain.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service-from-template
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  template:
    name: virtual-service-default-https-template
  virtualHost:
    domains:
      - exc.kaasops.io
